Added priority to pre-processors.